@@ -16,18 +16,17 @@
  */
 package org.apache.commons.jexl3;
 
+import org.junit.Assert;
+import org.junit.Test;
+
 /**
  * Test cases for assignment.
- * 
+ *
  * @since 1.1
  */
+@SuppressWarnings({"UnnecessaryBoxing", "AssertEqualsBetweenInconvertibleTypes"})
 public class AssignTest extends JexlTestCase {
-    private static final JexlArithmetic ARITH = new JexlArithmetic(false);
-    private static final JexlEngine ENGINE = new JexlEngine(null, ARITH, null, null);
-    static {
-        ENGINE.setSilent(false);
-    }
-    
+
     public static class Froboz {
         int value;
         public Froboz(int v) {
@@ -40,7 +39,7 @@ public class AssignTest extends JexlTestCase {
             return value;
         }
     }
-    
+
     public static class Quux {
         String str;
         Froboz froboz;
@@ -48,67 +47,70 @@ public class AssignTest extends JexlTestCase {
             this.str = str;
             froboz = new Froboz(fro);
         }
-        
+
         public Froboz getFroboz() {
             return froboz;
         }
-        
+
         public void setFroboz(Froboz froboz) {
             this.froboz = froboz;
         }
-        
+
         public String getStr() {
             return str;
         }
-        
+
         public void setStr(String str) {
             this.str = str;
         }
     }
 
-    public AssignTest(String testName) {
-        super(testName);
+    public AssignTest() {
+        super("AssignTest", new JexlBuilder().cache(512).strict(true).silent(false).create());
     }
 
     /**
      * Make sure bean assignment works
-     * 
+     *
      * @throws Exception on any error
      */
+    @Test
     public void testAntish() throws Exception {
-        Expression assign = ENGINE.createExpression("froboz.value = 10");
-        Expression check = ENGINE.createExpression("froboz.value");
+        JexlExpression assign = JEXL.createExpression("froboz.value = 10");
+        JexlExpression check = JEXL.createExpression("froboz.value");
         JexlContext jc = new MapContext();
         Object o = assign.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
         o = check.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
     }
 
+    @Test
     public void testAntishInteger() throws Exception {
-        Expression assign = ENGINE.createExpression("froboz.0 = 10");
-        Expression check = ENGINE.createExpression("froboz.0");
+        JexlExpression assign = JEXL.createExpression("froboz.0 = 10");
+        JexlExpression check = JEXL.createExpression("froboz.0");
         JexlContext jc = new MapContext();
         Object o = assign.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
         o = check.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
     }
-    
+
+    @Test
     public void testBeanish() throws Exception {
-        Expression assign = ENGINE.createExpression("froboz.value = 10");
-        Expression check = ENGINE.createExpression("froboz.value");
+        JexlExpression assign = JEXL.createExpression("froboz.value = 10");
+        JexlExpression check = JEXL.createExpression("froboz.value");
         JexlContext jc = new MapContext();
         Froboz froboz = new Froboz(-169);
         jc.set("froboz", froboz);
         Object o = assign.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
         o = check.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
     }
-    
+
     public void testAmbiguous() throws Exception {
-        Expression assign = ENGINE.createExpression("froboz.nosuchbean = 10");
+        JexlExpression assign = JEXL.createExpression("froboz.nosuchbean = 10");
         JexlContext jc = new MapContext();
         Froboz froboz = new Froboz(-169);
         jc.set("froboz", froboz);
@@ -118,50 +120,77 @@ public class AssignTest extends JexlTestCase {
         }
         catch(RuntimeException xrt) {
             String str = xrt.toString();
-            assertTrue(str.contains("nosuchbean"));
-            return;
+            Assert.assertTrue(str.contains("nosuchbean"));
         }
         finally {
-            assertEquals("Should have failed", null, o);
+            Assert.assertEquals("Should have failed", null, o);
         }
     }
-        
+
+    @Test
     public void testArray() throws Exception {
-        Expression assign = ENGINE.createExpression("froboz[\"value\"] = 10");
-        Expression check = ENGINE.createExpression("froboz[\"value\"]");
+        JexlExpression assign = JEXL.createExpression("froboz[\"value\"] = 10");
+        JexlExpression check = JEXL.createExpression("froboz[\"value\"]");
         JexlContext jc = new MapContext();
         Froboz froboz = new Froboz(0);
         jc.set("froboz", froboz);
         Object o = assign.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
         o = check.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
     }
-    
+
+    @Test
+    public void testMini() throws Exception {
+        JexlContext jc = new MapContext();
+        JexlExpression assign = JEXL.createExpression("quux = 10");
+        Object o = assign.evaluate(jc);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
+
+    }
+
+    @Test
     public void testMore() throws Exception {
         JexlContext jc = new MapContext();
         jc.set("quuxClass", Quux.class);
-        Expression create = ENGINE.createExpression("quux = new(quuxClass, 'xuuq', 100)");
-        Expression assign = ENGINE.createExpression("quux.froboz.value = 10");
-        Expression check = ENGINE.createExpression("quux[\"froboz\"].value");
+        JexlExpression create = JEXL.createExpression("quux = new(quuxClass, 'xuuq', 100)");
+        JexlExpression assign = JEXL.createExpression("quux.froboz.value = 10");
+        JexlExpression check = JEXL.createExpression("quux[\"froboz\"].value");
 
         Quux quux = (Quux) create.evaluate(jc);
-        assertNotNull("quux is null", quux);
+        Assert.assertNotNull("quux is null", quux);
         Object o = assign.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
         o = check.evaluate(jc);
-        assertEquals("Result is not 10", new Integer(10), o);
+        Assert.assertEquals("Result is not 10", new Integer(10), o);
     }
 
+    @Test
     public void testUtil() throws Exception {
-        Quux quux = ENGINE.newInstance(Quux.class, "xuuq", Integer.valueOf(100));
-        ENGINE.setProperty(quux, "froboz.value", Integer.valueOf(100));
-        Object o = ENGINE.getProperty(quux, "froboz.value");
-        assertEquals("Result is not 100", new Integer(100), o);
-        ENGINE.setProperty(quux, "['froboz'].value", Integer.valueOf(1000));
-        o = ENGINE.getProperty(quux, "['froboz']['value']");
-        assertEquals("Result is not 1000", new Integer(1000), o);
+        Quux quux = JEXL.newInstance(Quux.class, "xuuq", Integer.valueOf(100));
+        Assert.assertNotNull(quux);
+        JEXL.setProperty(quux, "froboz.value", Integer.valueOf(100));
+        Object o = JEXL.getProperty(quux, "froboz.value");
+        Assert.assertEquals("Result is not 100", new Integer(100), o);
+        JEXL.setProperty(quux, "['froboz'].value", Integer.valueOf(1000));
+        o = JEXL.getProperty(quux, "['froboz']['value']");
+        Assert.assertEquals("Result is not 1000", new Integer(1000), o);
     }
 
-
+    @Test
+    public void testRejectLocal() throws Exception {
+        JexlContext jc = new MapContext();
+        JexlScript assign = JEXL.createScript("var quux = null; quux.froboz.value = 10");
+        try {
+            Object o = assign.execute(jc);
+            Assert.fail("quux is local and null, should fail");
+        } catch (JexlException xjexl) {
+            String x = xjexl.toString();
+            String y = x;
+        }
+        // quux is a global antish var
+        assign = JEXL.createScript("quux.froboz.value = 10");
+        Object o = assign.execute(jc);
+        Assert.assertEquals(10, o);
+    }
 }
